tests/fail/zero_repeats.stderr
error: `repeats` must be positive
 --> tests/fail/zero_repeats.rs:9:37
  |
9 |     let _wave = sine_wave!(repeats: 0);
  |                                     ^
